--- a/index.html
+++ b/index.html
@@ -259,10 +259,10 @@
   var dead = false;
   var killer = "";
   var reloading = false;
-  var version = "1.0.0_alpha2";
+  var version = "1.0.0_alpha2_01";
   var CONFIG_SERVER = window.CONFIG_SERVER || "localhost";
   var PROTOCOL = "ws";
-  if(CONFIG_SERVER != "localhost") protocol = "wss";
+  if(CONFIG_SERVER != "localhost") PROTOCOL = "wss";
   function createMaterial(name) {
     if(materials[name]) return;
     materials[name] = new THREE.MeshBasicMaterial({map: textureLoader.load("assets/textures/"+name+".png"), alphaTest: 0.95});
