--- a/stats.html
+++ b/stats.html
@@ -10,7 +10,7 @@
     button {
       font-family: blockbuilder3D;
       background-color: white;
-      /*position: fixed;*/
+      position: fixed;
       background-image: url("assets/textures/UI/button.png");
       background-size: 100% 100%;
     }
@@ -24,7 +24,7 @@
   </style>
   <title>PIXEL ARENA STATS</title>
 </head>
-<body style="font-family: BlockBuilder3D; font-size: 200%; text-align: center; max-width: 25%">
+<body style="font-family: BlockBuilder3D; font-size: 200%; text-align: center;">
   <h1>Statistics</h1>
   <table>
     <tr>
@@ -42,8 +42,8 @@
   </table>
   <br>
   <br>
-  <a href="index.html"><button><h1>Back</h1></button></a>
-  <a href="index.html"><button onclick='e=confirm("Are you sure? This may affect Blockbuilder3D world saves!"); e&&localStorage.clear()'><h1>Erase stats</h1></button></a>
+  <a href="javascript:parent.location.href=parent.location.href"><button style="left: 20%"><h1>Back</h1></button></a>
+  <a href="javascript:parent.location.href=parent.location.href"><button style="left: 40%" onclick='e=confirm("Are you sure? This may affect Blockbuilder3D world saves!"); e&&localStorage.clear()'><h1>Erase stats</h1></button></a>
   <script>
     onload = function () {
       for(var i = 0; i < document.all.length; i++) {
