--- a/stats.html
+++ b/stats.html
@@ -42,8 +42,8 @@
   </table>
   <br>
   <br>
-  <a href="javascript:parent.location.href=parent.location.href"><button style="left: 20%"><h1>Back</h1></button></a>
-  <a href="javascript:parent.location.href=parent.location.href"><button style="left: 40%" onclick='e=confirm("Are you sure? This may affect Blockbuilder3D world saves!"); e&&localStorage.clear()'><h1>Erase stats</h1></button></a>
+  <a href="javascript:parent.document.getElementById('stat').outerHTML=''"><button style="left: 20%"><h1>Back</h1></button></a>
+  <a href="javascript:location.href=location.href"><button style="left: 40%" onclick='e=confirm("Are you sure? This may affect Blockbuilder3D world saves!"); e&&localStorage.clear()'><h1>Erase stats</h1></button></a>
   <script>
     onload = function () {
       for(var i = 0; i < document.all.length; i++) {
